Closed Bug 328041 Opened 18 years ago Closed 18 years ago

File: Open filter prevents selection of local SVG files

Categories

(Camino Graveyard :: OS Integration, defect)

PowerPC
macOS
defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.5

People

(Reporter: jay, Assigned: Usul)

Details

(Keywords: fixed1.8.0.4, fixed1.8.1, polish, Whiteboard: [camino-1.0.1])

Attachments

(1 file, 3 obsolete files)

User-Agent:       Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.0.1) Gecko/20060207 Camino/1.0rc1+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.0.1) Gecko/20060207 Camino/1.0rc1+

It is not possible to open any local SVG files using camino

Reproducible: Always




currently one has to control click etc...

can't understand how this slipped through?
aplogies if this is my error through ignorance
Wevah, you've fixed some of these "filepicker doesn't recognize this extension/type code" bugs before.  Can you take this one?

Extensions: .svg, .svgz
Type Codes: SVG , SVGZ

Since SVG is supported natively now (instead of plugin content, which we don't include), we should probably also add these file types and extensions to the other image formats we claim to be able to view in Info*.plist.

Jonathan, you can view these in the meantime by dragging them from the Finder to the content area, or by command-option-dragging the file to the Camino icon or Dock icon.
Severity: normal → minor
Status: UNCONFIRMED → NEW
Component: General → OS Integration
Ever confirmed: true
Keywords: polish
Summary: filter prevents file-open SVG files: camino only → File: Open filter prevents selection of local SVG files
Target Milestone: --- → Camino1.1
If we're going to support SVG fully, we should get this for 1.0.1. Requesting approval for 1.0.1.
Flags: camino1.0.1?
Attached patch adding support for svg files (obsolete) — Splinter Review
Assignee: mikepinkerton → qa-mozilla
Status: NEW → ASSIGNED
Attachment #212746 - Flags: review?(mikepinkerton)
Attachment #212746 - Attachment is obsolete: true
Attachment #212747 - Flags: review?(mikepinkerton)
Attachment #212746 - Flags: review?(mikepinkerton)
Comment on attachment 212747 [details] [diff] [review]
support svg files while opening such files

I have two minor issues with this patch:

1) It's missing the changes to Info*.plist (see my comment 1)

2) For cleanliness's sake, it seems like the svg entries should be with the image formats rather than with webloc (which will be getting ftploc and such to go along with it soon).
(In reply to comment #5)
> (From update of attachment 212747 [details] [diff] [review] [edit])
> I have two minor issues with this patch:
> 
> 1) It's missing the changes to Info*.plist (see my comment 1)

Do you happen to know the name of the icon file for svg files ?


Ludovic
(In reply to comment #6)
> (In reply to comment #5)
> > 1) It's missing the changes to Info*.plist (see my comment 1)
> 
> Do you happen to know the name of the icon file for svg files ?

Just put it in the same block with the other image file types there, too, and it'll use whatever they use (or do not use).  We're just claiming to be a viewer, so I don't think we provide an icon.
(In reply to comment #1)
> Type Codes: SVG , SVGZ

Where did you get these ?
Attached patch complete patch with info plist. (obsolete) — Splinter Review
File Types taken from Adobe's illustrator.
Attachment #213028 - Flags: review?(mozilla)
Attachment #212747 - Flags: review?(mikepinkerton)
Comment on attachment 213028 [details] [diff] [review]
complete patch with info plist.

I tested this patch and found two problems/typos:

The non-compressed SVG type code is 'SVG ', not 'SVG'.  

Also, the .svgz extension doesn't work in the Open File dialogue (due to the missing comma at the end of the line in the MainController.mm part).
Attachment #213028 - Flags: review-
Attached patch v 2.0Splinter Review
correcting Smokey's founding.
Attachment #212747 - Attachment is obsolete: true
Attachment #213028 - Attachment is obsolete: true
Attachment #213028 - Flags: review?(mozilla)
Comment on attachment 213299 [details] [diff] [review]
v 2.0

Looks good to me; r=me.
Attachment #213299 - Flags: review+
Comment on attachment 213299 [details] [diff] [review]
v 2.0

sr=pink
Attachment #213299 - Flags: superreview+
Whiteboard: [needs checkin]
Checked in to trunk and branch.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
Flags: camino1.0.1? → camino1.0.1+
Fixed on CAMINO_1_0_1_MINIBRANCH and MOZILLA_1_8_0_BRANCH for cycles >=1.8.0.3
(Cm >= 1.0.2).
Keywords: fixed1.8.0.3
Whiteboard: [needs checkin] → [needs checkin][camino-1.0.1]
Whiteboard: [needs checkin][camino-1.0.1] → [camino-1.0.1]
You need to log in before you can comment on or make changes to this bug.