fix bug 328041, File: Open filter prevents selection of local SVG files, r=wevah, sr=pinkerton. Patch by Ludovic Hirlimann (qa-mozilla@hirlimann.net).  Camino-only